# solana-zk-layer2

./: .env.dev  .gitignore  Cargo.toml  README.md
prover/host/: Cargo.toml
prover/host/src/: gen_proof.rs  main.rs
prover/program/: Cargo.toml
prover/program/src/: main.rs
sequencer/: Cargo.toml
sequencer/block_db/: db
sequencer/src/: executor.rs  main.rs  node.rs  rpc.rs  validator.rs
sequencer/src/batcher/: mod.rs  tx_batcher.rs
sequencer/src/oracle/: l1_msg_oracle.rs  mod.rs
sequencer/state_db/: db
share/: Cargo.toml
share/src/: lib.rs  state.rs  transaction.rs  zkvm.rs
solana-program/: Anchor.toml  Cargo.toml
solana-program/client/: Cargo.toml
solana-program/client/src/: event_listen.rs  lib.rs  main.rs  state_call.rs
solana-program/programs/l2-state/: Cargo.toml
solana-program/programs/l2-state/src/: biz_error.rs  bridge.rs  error.rs  lib.rs  state.rs  util.rs  verifier.rs
