[workspace]
members = [
    "sequencer",
    "share",
    "prover/program",
    "prover/host",
    "solana-program/client",
]
exclude = ["solana-program/programs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.42.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.12"
eyre = "0.6.12"
lazy_static = "1.5.0"
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"
sled = "0.34.7"
log = "0.4.26"
env_logger = "0.11.7"
sha2 = "0.10.8"
bincode = "1.3.3"

solana-sdk = "=2.1.6"
solana-client = "=2.1.6"
anchor-lang = "0.31.0"


# prover
sp1-sdk = "5.0.3"
sp1-zkvm = "5.0.0"
