[package]
name = "sequencer"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
solana-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
log.workspace = true
env_logger.workspace = true
tower-http.workspace = true
rand.workspace = true
lazy_static.workspace = true
eyre.workspace = true
bincode.workspace = true
sled.workspace = true
share = { path = "../share" }
l2-state-client = { path = "../solana-program/client" }
