[package]
name = "sequencer"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
anyhow.workspace = true
solana-sdk.workspace = true
solana-transaction-status.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
log.workspace = true
env_logger.workspace = true
tower-http.workspace = true
dotenv.workspace = true
lazy_static.workspace = true
eyre.workspace = true
bincode.workspace = true
base64.workspace = true
sled.workspace = true
solana-client.workspace = true

share = { path = "../share" }
l2-state-client = { path = "../solana-program/client" }
