[package]
name = "share"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
solana-sdk.workspace = true
sled.workspace = true
log.workspace = true
anyhow.workspace = true
bincode.workspace = true
lazy_static.workspace = true
