[workspace]
members = [ "client",
    "programs/*"
]
resolver = "2"


[workspace.dependencies]
anchor-lang = "0.31.0"
borsh = "1.5.7"
solana-sdk = "=2.1.6"
solana-client = "=2.1.6"
anyhow = "1.0"
log = "0.4.26"
env_logger = "0.11.7"
base64 = "0.21"
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
hex = "0.4"
sp1-solana = { git = "https://github.com/succinctlabs/sp1-solana" }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
