[package]
name = "l2-state-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "l2_state_client"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
solana-sdk.workspace = true
solana-client.workspace = true
anchor-lang.workspace = true
anyhow.workspace = true
log.workspace = true
env_logger.workspace = true
base64 = "0.21"
